# 3D_Cellular_Automata

./: Cargo.toml  README.md
src/: camera.rs  cell_renderer.rs  cells_multithreaded.rs  constants.rs  framework.rs  graphics.rs  instance.rs  lib.rs  main.rs  neighbors.rs  rotating_camera.rs  rule.rs  settings.rs  shader.wgsl  simulation.rs  test.rs  text_renderer.rs  texture.rs  utils.rs  vertex.rs
src/shaders/: shader.wgsl  world_grid.wgsl
