[package]
name = "cellular_automata_3d"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wgpu = "0.20.0"
winit = "0.29.15"
env_logger = "0.11.3"
log = "0.4.21"
rand = "0.8.5"
pollster = "0.3.0"
bytemuck = "1.15.0"
glam = "0.27.0"
cgmath = "0.18.0"
rayon = "1.10.0"
clap = { version = "4.5.4", features = ["derive"] }
human-panic = "2.0.0"
